--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,14 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Stylesheet -->
+  <!--<link rel="stylesheet" type="text/css" href="assets/css/vendor/semantic.min.css">-->
+  <!--<link rel="stylesheet" type="text/css" href="styles.css">-->
+  <!--<link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />-->
+  <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap/bootstrap.min.css">
+
 </head>
-<body>
-  <app-root>Loading...</app-root>
+<body class="m-a-1">
+  <web-app>Loading...</web-app>
 </body>
 </html>
